# arrow_schema_2_json

./: CMakeLists.txt  Doxyfile  README.md  Schema2Json.pro  install.sh
doc/html/: _schema_json_conv_8h_source.html  annotated.html  class_schema_json_conv___test-members.html  class_schema_json_conv___test.html  classes.html  classservice_1_1_schema_json_conv-members.html  classservice_1_1_schema_json_conv.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  namespaces.html  namespaceservice.html
doc/html/search/: all_1.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js
doc/latex/: _schema_json_conv_8h_source.tex  annotated.tex  class_schema_json_conv___test.eps  class_schema_json_conv___test.tex  classservice_1_1_schema_json_conv.tex  files.tex  hierarchy.tex  index.tex  namespaces.tex  namespaceservice.tex  refman.tex
src/: SchemaJsonConv.cpp  SchemaJsonConv.h
test/: SchemaJsonConv_Test.cpp
